syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message ValuesForGeneration {
    int32 firstValue = 1;
    int32 lastValue = 2;
}

message GeneratedValueMessage {
    int32 value = 1;
}

message Empty {}

service RemoteDBService {
    rpc getGeneratedValues(ValuesForGeneration) returns (stream GeneratedValueMessage);
}
